Tuned NF ingestion
